<resources>
    <string name="app_name">Audio Player</string>

    <string name="home">Home</string>

    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="folders">Folders</string>
    <string name="artist">Artist</string>
    <string name="permission_granted">PERMISSION GRANTED</string>
    <string name="delete">Delete</string>
    <string name="dlg_retry">Retry</string>
    <string name="delete_audio_success">Delete audio success</string>
    <string name="error_delete_audio">Cant delete audio</string>
    <string name="search">Search</string>
    <string name="sort">Sort By</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="grid_size">"Grid size "</string>
    <string name="grid_size1">1</string>
    <string name="grid_size2">2</string>
    <string name="grid_size3">3</string>
    <string name="settings">Settings</string>
    <string name="eqalizer">Eqalizer</string>
</resources>